--- a/.github/workflows/weekly.yml
+++ b/.github/workflows/weekly.yml
@@ -12,7 +12,8 @@ on:
       - '.github/workflows/base.yml'
       - '.github/workflows/base-windows.yml'
   schedule:
-    - cron: '15 0 * * 6'
+    # Run at 00:00 on Sundays
+    - cron: '0 0 * * 0'
   workflow_dispatch:
 
 # The following aims to reduce CI CPU cycles by:
